/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.5.1/samples
 * This project uses @Incubating APIs which are subject to change.
 */

/*
* This file was generated by the Gradle 'init' task.
*/

apply plugin: 'war'


sourceSets {
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    //implementation 'com.google.code.gson:gson:2.10.1'
    //implementation project(':shared')
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'


    implementation 'org.bouncycastle:bcpkix-jdk18on:1.72'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.72'

    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'

    implementation 'io.jsonwebtoken:jjwt:0.12.5'


    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.1.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

//    implementation group: 'org.springframework', name: 'spring-core', version: '6.2.4'
//    implementation group: 'org.springframework', name: 'spring-context', version: '6.2.4'
//    implementation group: 'org.springframework', name: 'spring-beans', version: '6.2.4'
//    implementation group: 'org.springframework', name: 'spring-webmvc', version: '6.2.4'
//    implementation 'org.springframework:spring-jdbc:6.2.4'
//    testImplementation group: 'org.springframework', name: 'spring-test', version: '6.2.4'
//    implementation 'org.springframework.security:spring-security-core:6.2.4'
    implementation group: 'org.springframework.security', name: 'spring-security-acl', version: '6.2.4'

    implementation 'org.springframework.boot:spring-boot-starter-test:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-logging:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-security:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.4'
    implementation 'org.springframework.boot:spring-boot-starter-cache:3.2.4'



    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    implementation 'com.thetransactioncompany:cors-filter:1.3.2'

    implementation group: 'com.google.guava', name: 'guava', version: '33.0.0-jre'

    implementation 'org.eclipse.jetty.ee10:jetty-ee10-webapp:12.0.8'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'

}


group = 'Cerberus'
version = '0.0.1-SNAPSHOT'
description = 'Cerberus'
java.sourceCompatibility = JavaVersion.VERSION_21


tasks.named('test', Test) {
    useJUnitPlatform()

    maxHeapSize = '1G'

    testLogging {
        events "started", "passed", "skipped", "failed"
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters"
    options.compilerArgs << "-Xlint:deprecation"
}


test {
    include "**/Test*.class"
    include "**/*Test.class"
    include "**/*Test.class"
    include "**/*TestCase.class"
}

war {
    archiveFileName = 'cerberus.war'
    //destinationDirectory = new File("/home/hexi/apache-tomcat-10.1.13/webapps")
    destinationDirectory = new File("/home/hexi/apache-tomcat-10.1.23/webapps/")

}

//jar {
//    manifest {
//        attributes(
//                'Main-Class': 'Main',
//                'Multi-Release': 'true'
//        )
//    }
// }
